# sbtb-2020-type-safe-fpga

./: .gitignore  LICENSE  README.md  nixpkgs.nix  quartus.nix  shell.nix
.github/workflows/: Clash IP Compiles.yml  Presentation PDF.yml
examples/: NewHidden.hs  README.md
ip/: DotProduct.hs  DotProductSignal.hs  NetworkTypes.hs  ReLU.hs  RunNetwork.hs  default.nix  runNetworkTop.sv
nix/: gitignore-source.nix
nixos/: README.md  configuration.nix  hardware-configuration.nix
presentation/: .gitignore  Makefile  README.md  default.nix  sbtb-2020-type-safe-fpga.md  shell.nix
presentation/fig/: chip.afdesign  dotproduct-foldr1.afdesign  fig-template.afdesign  network.afdesign  nn-output.afdesign
quartus-project/: .gitignore  README.md  conversion_to_rbf.cof  conversion_to_rbf.tcl  nn.qpf  nn.qsf  nn.sdc  nn.v  nn_assignment_defaults.qdf  runNetwork.v  runNetworkAVS_hw.tcl  soc_system.qsys
quartus-project/test/: README.md  run2Dnetwork.sh
rust/: .gitignore  Cargo.toml
rust/.cargo/: config
rust/src/: data.rs  lib.rs  resources.rs  session.rs  traits.rs
