[package]
name = "sbtb-rust"
version = "0.1.0"
authors = ["Daniel Hensley <hensley.daniel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7.0"
lazy_static = "1.4.0"
fixed = "1.5.0"

[lib]
name = "sbtb"
path = "src/lib.rs"

[[bin]]
name = "classify_point_nn_example"
path = "src/bin/classify_point_nn_example.rs"